[gd_scene load_steps=3 format=3 uid="uid://doeg684q4m3n8"]

[ext_resource type="Script" path="res://database_manager.gd" id="1_q1ag1"]
[ext_resource type="Script" path="res://new_entry_button.gd" id="2_rs4gk"]

[node name="DatabaseManager" type="Control" node_paths=PackedStringArray("schema_button_container", "entry_button_container", "new_entry_name", "new_entry_button", "entry_delete_button", "entry_field_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1ag1")
schema_button_container = NodePath("HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer")
entry_button_container = NodePath("HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer")
new_entry_name = NodePath("HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryName")
new_entry_button = NodePath("HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryButton")
entry_delete_button = NodePath("HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/EntryDeleteButton")
entry_field_container = NodePath("HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Schemas"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
text = "Entries"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewEntryName" type="LineEdit" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New entry name..."

[node name="NewEntryButton" type="Button" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("line_edit", "entry_container")]
layout_mode = 2
disabled = true
text = "New"
script = ExtResource("2_rs4gk")
line_edit = NodePath("../NewEntryName")
entry_container = NodePath("../../PanelContainer/MarginContainer/ScrollContainer/VBoxContainer")

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Fields"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="EntryDeleteButton" type="Button" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Delete"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_changed" from="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryName" to="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryButton" method="_on_new_entry_name_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryName" to="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryButton" method="_on_new_entry_name_text_submitted"]
[connection signal="new_entry_requested" from="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer2/NewEntryButton" to="." method="_on_new_entry_button_new_entry_requested"]
[connection signal="pressed" from="HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/EntryDeleteButton" to="." method="_on_entry_delete_button_pressed"]
